--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="api_key">b5d1ae16bbc356ed27012f605500ed71</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="popular_movies">Popular Movies</string>
+    <string name="title">Title:</string>
+    <string name="movie_poster">Movie Poster</string>
+    <string name="overview">Overview:</string>
+    <string name="rating">Rating:</string>
+    <string name="popular_people">Popular People</string>
+    <string name="profile_image">Profile Image</string>
+    <string name="name">Name:</string>
+    <string name="popularity">Popularity:</string>
+    <string name="upcoming_movies">Upcoming Movies</string>
+    <string name="upcoming_movie_poster">Upcoming Movie Poster</string>
 </resources>
